# roll_lang_frontend

./: .gitignore  Cargo.toml  README.md  build.sh  package.json  tsconfig.json
src/: lib.rs  macro_traits.rs  output_traits.rs  wasm_interface.rs
src/web/: ids.rs  mod.rs
www/: index.html
www/css/: play_area.css  styles.css
www/css/side_bar/: history.css  macros.css  tabs.css
www/js/: config_ids.js  history.js  main.js  slider.js  tabs.js
www/static/assets/shaders/: fragment.frag  grid.frag  grid.vert  vertex.vert
www/static/css/: about.css  account.css  create_account.css  grammer.css  header.css  help.css  license.css  login.css  play_area.css  styles.css
www/static/css/side_bar/: character-sheet.css  character_sheet.css  history.css  macros.css  notes.css  result.css  settings.css  tables.css  tabs.css
www/static/html/: about.html  help.html  javascript.html
www/static/scripts/: chat.ts  common.js  config.ts  config_ids.js  fetch.ts  gl-matrix.js  help_main.ts  init_wasm.js  init_wasm.ts  macro_table_sort.js  macros.js  macros.ts  main.js  main.ts  map_editor.ts  play_area.js  play_area.js.map  play_area.ts  settings.js  slider.js  slider.ts  tabs.js  tabs.ts
www/static/scripts/renderer/: camera.ts  canvas_observer.ts  layer.ts  level.ts  renderer.ts  resources.ts
www/templates/: about.html.tera  account.html.tera  create_account.html.tera  help.html.tera  index.html.tera  javascript.html.tera  login.html.tera  macros.html.tera
