[package]
name = "roll_lang_frontend"
version = "0.1.0"
authors = ["jacob <jacobrwguenther@protonmail.com>"]
edition = "2018"
repository = "https://github.com/jacobguenther/roll_lang"

[lib]
crate-type = ["cdylib"]

[dependencies.roll_lang]
version = "0.1.0"
git = "https://github.com/jacobguenther/RollLang"
branch = "master"

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.wasm-bindgen]
version = "0.2.67"

[dependencies.console_error_panic_hook]
version = "0.1.6"

[dependencies.web-sys]
version = "0.3"
features = [ "Window", "console", "Document", "HtmlDocument", "Element", "HtmlTextAreaElement", "HtmlInputElement"]

[dependencies.js-sys]
version = "0.3.44"
