[package]
name = "roll_lang_frontend"
version = "0.1.0"
authors = ["jacob <jacobrwguenther@protonmail.com>"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/jacobguenther/roll_lang_frontend"
license-file = "LICENSE.md"
keywords = []
categories = []

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.44"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2.67"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [ "Window", "Document", "HtmlDocument", "Element", "HtmlTextAreaElement", "HtmlInputElement"]

[dependencies.roll_lang]
version = "0.1.0"
git = "https://github.com/jacobguenther/RollLang"
default-features = false